--- a/templates/pages/article.rhtml
+++ b/templates/pages/article.rhtml
@@ -2,6 +2,7 @@
   <header>
     <h1><%= title %></h1>
     <span class="date"><%= date %></span>
+    <p style="clear:both;"> </p>
   </header>
 
   <section class="content">
