--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,56 +1,131 @@
-html { margin: 20px }
+/*html { margin: 20px }*/
 body {
   margin: 0 auto;
-  font-family: 'Baskerville', Georgia, Times, serif;
-  font-size: 20px;
+  background: #fff;
+  /*  font-family: 'Baskerville', Georgia, Times, serif;*/
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 16px;
   line-height: 30px;
   padding: 15px;
-  width: 720px;
-
+  color: #333;
+  text-shadow: #bbb 1px 1px 2px;
+  text-align: center;
 }
 header, footer, section, article {
 	display: block;
 }
 #content {
+  width: 500px;
+  text-align: left;
+  margin: 0px auto;
+  font-size: 0.9em;
 }
 #by {
 	font-style: italic;
   margin-right: 5px;
-	font-size: 28px;
+	font-size: 1.5em;
 }
 #caption {
 	position: absolute;
-	font-size: 24px;
+	font-size: 1.3em;
 	margin: -135px 0 0 70px;
 }
 #path {
 	color: #b53131;
 }
-.date {
-  font-style: italic;
-  float: right;
-  line-height: 43px;
-  margin-right: 30px;
+
+#stuff {
+/*  display:none;*/
+  border-width: 0 1px 1px 1px;
+  border-style: solid;
+  border-color: #fff;
+/*  background: #aaa;*/
+  height: 150px;
+  width: 500px;
+  margin: -186px auto 0 auto;
+  text-align: left;
+  padding: 10px 0 0 0;
+  -moz-border-radius-bottomleft: 3px;
+  -moz-border-radius-bottomright: 3px;
+  -webkit-border-bottom-left-radius: 3px;
+  -webkit-border-bottom-right-radius: 3px;
+  border-radius-bottom-left: 3px;
+  border-radius-bottom-right: 3px;
+  -webkit-box-shadow: 1px 1px 3px rgba(0,0,0,0.6);
+  -moz-box-shadow: 1px 1px 3px rgba(0,0,0,0.6);
+  box-shadow: 1px 1px 3px rgba(0,0,0,0.6);
 }
-a {
-  color: #b83000;
+
+#stuff p {
+  padding: 0px 10px 5px 5px;
 }
-h1 a {
+
+a#show { 
+  text-decoration: none; 
+  padding: 25px 0 0 0;
   color: black;
-  text-decoration: none;
+  font-size: 1.5em;
 }
+
+a {
+  color: #27d;
+}
+
 a:hover {
+  color: #b41;
   text-decoration: underline;
 }
-body > header > h1 {
-	border-left: 30px solid black;
-	padding-left: 30px;
-  font-size: 201px;
-  margin: 100px 0 15px 0;
-  font-weight: normal;
+
+a:visited {
+  color: #737;
 }
+
+h1 a {
+  color: #333;
+  text-decoration: none;
+}
+
+h1 a:hover {
+  color: #333;
+  text-decoration: underline;
+}
+
+h1 a:visited {
+  color: #333;
+}
+
+
+header#header {
+  background: transparent url(/images/nosignal-sm2.jpg) top right no-repeat;
+  height: 75px;
+}
+
+body > header > h1 {
+  font-size: 2.5em;
+  color: green;
+  font-weight: bold;
+  font-family: Georgia, Times, serif !important;
+}
+
+body > header > h1 a {
+  color: green;
+  text-decoration: none;
+}
+
+body > header > h1 a:hover {
+  color: green;
+  text-decoration: underline;
+}
+
+body > header > h1 a:visited {
+  color: green;
+  text-decoration: none;
+}
+
+
 .post header {
 	margin-bottom: 10px;
+	text-align: left;
 }
 .post .body p:first-child {
 	margin-top: 0;
@@ -60,6 +135,7 @@ body > header > h1 {
 }
 .post {
 	margin-bottom: 30px;
+	text-align: justify;
 }
 .post:last-child {
   margin-bottom: 10px;
@@ -73,26 +149,41 @@ body > header > h1 {
   font-style: italic;
   text-align: right;
 }
+
+.post span.date {
+  display: block;
+  color: #777;
+  width: 200px;
+  float: left;
+  margin: 0 0 0 -215px;
+  line-height: 1.2em;
+  font-size: 1.3em;
+  letter-spacing: -2;
+  text-align: right;
+}
+
 .more a {
   text-decoration: none;
 }
 .more a:hover { text-decoration: underline }
 body > header {
 	display: block;
-	padding-top: 30px;
-	line-height: 180px;
 	margin-bottom: 20px;
+	text-align: left;
+	width: 500px;
+	margin: 20px auto 15px auto;
 }
 h1, h2, h3, h4 {
   display: inline;
   margin: 0;
   font-weight: 600;
+  font-family: Georgia, Times, serif;
 }
 ul, li {
   list-style-type: none;
 }
 code {
-  font-family: 'Anonymous Pro', 'Bitstream Vera Sans', 'Monaco', Courier, mono;
+  font-family: 'Inconsolata', 'Anonymous Pro', 'Bitstream Vera Sans', 'Monaco', Courier, mono;
 }
 pre {
   padding: 20px;
@@ -103,8 +194,22 @@ blockquote {
 
 body > footer {
   text-align: left;
-  margin-left: 10px;
+  margin: 10px auto 0 auto;
 	font-style: italic;
   font-size: 18px;
   color: #888;
+  width: 500px;
+  
+}
+
+img {
+  padding: 3px;
+  background: white;
+  border: 1px solid #666;
+  -moz-border-radius: 3px;
+  -webkit-border-radius: 3px;
+  border-radius: 3px;
+  -webkit-box-shadow: 1px 1px 3px rgba(0,0,0,0.6);
+  -moz-box-shadow: 1px 1px 3px rgba(0,0,0,0.6);
+  box-shadow: 1px 1px 3px rgba(0,0,0,0.6);
 }
