--- a/templates/pages/archives.rhtml
+++ b/templates/pages/archives.rhtml
@@ -1,7 +1,17 @@
-<h1><%= @path %></h1>
+<h1><%= @path.capitalize unless @path.nil? %></h1>
+<% if @path != 'archives' && !@path.nil? %>
+  <br /><a href="/archives">&laquo; Back To All Archives</a>
+<% end %>
 <ul>
   <% if archives.length > 0 %>
+    <% @year = "" %>
     <% for entry in archives %>
+      <% if entry.date.match(/2\d\d\d$/).to_s != @year %>
+        <% @year = entry.date.match(/2\d\d\d$/).to_s %>
+        <% unless @year == @path %>
+        <li><h2><a href="/<%= @year %>" style="text-decoration:none;"><%= @year %> &raquo;</a></h2></li>
+        <% end %>
+      <% end %>
       <li>
         <a href="<%= entry.path %>"><%= entry.title %></a>
       </li>
