--- a/templates/layout.rhtml
+++ b/templates/layout.rhtml
@@ -30,6 +30,15 @@
     <footer>
       powered by <a href="http://cloudhead.io/toto">toto</a>
     </footer>
+    <script type="text/javascript">
+    var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+    document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+    </script>
+    <script type="text/javascript">
+    var pageTracker = _gat._getTracker("UA-77047-1");
+    pageTracker._initData();
+    pageTracker._trackPageview();
+    </script>
   </body>
 </html>
 
