Added some links to the main page.

--- a/templates/pages/main.rhtml
+++ b/templates/pages/main.rhtml
@@ -1,2 +1,9 @@
 I'm a Software Developer and Entrepreneur living in Minneapolis, MN.
 
+See also:
+
+[twitter/philcrissman](http://twitter.com/philcrissman)
+[facebook/philcrissman](http://facebook.com/philcrissman)
+[github/philcrissman](http://github.com/philcrissman)
+[linkedin/in/philcrissman](http://www.linkedin.com/in/philcrissman)
+
