Added some links to the main page, fixed.

--- a/templates/pages/main.rhtml
+++ b/templates/pages/main.rhtml
@@ -1,9 +1,9 @@
-I'm a Software Developer and Entrepreneur living in Minneapolis, MN.
+I'm a software developer and entrepreneur living in Minneapolis, MN.
 
 See also:
 
-[twitter/philcrissman](http://twitter.com/philcrissman)
-[facebook/philcrissman](http://facebook.com/philcrissman)
-[github/philcrissman](http://github.com/philcrissman)
-[linkedin/in/philcrissman](http://www.linkedin.com/in/philcrissman)
+<a href="http://twitter.com/philcrissman">twitter/philcrissman</a>
+<a href="http://facebook.com/philcrissman">facebook/philcrissman</a>
+<a href="http://github.com/philcrissman">github/philcrissman</a>
+<a href="http://www.linkedin.com/in/philcrissman">linkedin/philcrissman</a>
 
