Added some links to the main page, fixed.

--- a/templates/pages/main.rhtml
+++ b/templates/pages/main.rhtml
@@ -1,9 +1,9 @@
 I'm a software developer and entrepreneur living in Minneapolis, MN.
 
 See also:
-
-<a href="http://twitter.com/philcrissman">twitter/philcrissman</a>
-<a href="http://facebook.com/philcrissman">facebook/philcrissman</a>
-<a href="http://github.com/philcrissman">github/philcrissman</a>
-<a href="http://www.linkedin.com/in/philcrissman">linkedin/philcrissman</a>
-
+<ul>
+  <li><a href="http://twitter.com/philcrissman">twitter/philcrissman</a></li>
+  <li><a href="http://facebook.com/philcrissman">facebook/philcrissman</a></li>
+  <li><a href="http://github.com/philcrissman">github/philcrissman</a></li>
+  <li><a href="http://www.linkedin.com/in/philcrissman">linkedin/philcrissman</a></li>
+</ul>
