--- a/templates/pages/main.rhtml
+++ b/templates/pages/main.rhtml
@@ -1,9 +1,48 @@
 I'm a software developer and entrepreneur living in Minneapolis, MN.
-
-See also:
+<br/>
+<h3>Also find me at:</h3>
 <ul>
   <li><a href="http://twitter.com/philcrissman">twitter/philcrissman</a></li>
   <li><a href="http://facebook.com/philcrissman">facebook/philcrissman</a></li>
-  <li><a href="http://github.com/philcrissman">github/philcrissman</a></li>
   <li><a href="http://www.linkedin.com/in/philcrissman">linkedin/philcrissman</a></li>
+</ul>
+
+<h3>Software &amp; Projects:</h3>
+<ul>
+  <p><li><a href="http://github.com/philcrissman">github/philcrissman</a></li></p>
+</ul>
+
+<h3>Work:</h3>
+<ul>
+  <li><a href="http://betadeluxe.com">Betadeluxe</a></li>
+  <li><a href="http://crissmanmarketing.com">Crissman Marketing &amp; Design</a></li>
+</ul>
+
+<h3>I've done work for:</h3>
+<ul>
+  <li><a href="http://slantwisedesign.com">Slantwise Design</a></li>
+  <li><a href="http://mattbauer.github.com">Matt Bauer</a></li>
+  <li><a href="http://tumblon.com">Tumblon</a></li>
+</ul>
+
+<h3>Other Twin Cities Rubyists/designers/developers I've had the privilege of working with:</h3>
+<ul>
+  <li><a href="http://justlooking.recursion.org">Luke Francl</a></li>
+  <li><a href="http://akvamme.posterous.com/">Andy Kvamme</a></li>
+  <li><a href="http://www.linkedin.com/in/mckeed">Duncan Mckee</a></li>
+  <li><a href="http://www.workingasintended.com/blog/">James Ludlow</a></li>
+  <li><a href="http://www.loonsoft.com/about">McLain Looney</a></li>
+  <li><a href="http://orstaddesign.com/">Norm Orstad</a></li>
+  <li><a href="http://livefront.com">Mike Bollinger</a></li>
+  <li>Possibly many other too numerous to mention, who can probably be found through the <a href="http://ruby.mn"><acronym title="Ruby Users of Minnesota">RUM</acronym></a></li>
+</ul>
+
+<h3>The Twin Cities (Minneapolis/St. Paul) is not exactly Silicon Valley. But we have it going on.</h3>
+<ul>
+  <li><a href="http://minnestar.org">Minne*</a>: The local non-profit behind Minnedemo and Minnebar, catalysts and hubs for the local tech scene.</li>
+  <li><a href="http://tech.mn">Tech.MN</a>: News about Twin Cities startups and technology.</li>
+  <li><a href="http://coldstart.tumblr.com">Coldstart Podcast</a>: The Twin Cities startup podcast</li>
+  <li><a href="http://mobileorchard.com">MobileOrchard</a>: The premier iPhone development blog, by <a href="http://unpossible.com">Dan Grigsby</a>, lives right here in the Cities.</li>
+  <li><a href="http://railspikes.com">RailSpikes</a>: Locally run Ruby on Rails blog.</li>
+  <li><a href="http://centralstandardtech.com/">Central Standard Tech</a>: Oh, you wanted more RSS feeds? This should help you.</li>
 </ul>
