Added a feedburner link.

--- a/templates/layout.rhtml
+++ b/templates/layout.rhtml
@@ -10,11 +10,13 @@
   <body>
     <div id="stuff">
       <img src="/images/phil_pic_sq.jpg" align="right" width="100" style="margin: 20px 10px 0 0" />
-      <ul>
+      <ul style="float:left; width: 130px;">
+        <li><a href="/">Home</a></li>
         <li><a href="/blog">Blog</a></li>
         <!-- <li><a href="/about">About</a></li> -->
         <li><a href="/archives">Archives</a></li>
       </ul>
+      <p><a href="http://feeds.feedburner.com/philcrissman"><img src="http://feeds.feedburner.com/~fc/philcrissman?bg=0099ee&amp;fg=000000&amp;anim=0" height="26" width="88" style="border:0" alt="" /></a></p>
       
       &nbsp;<br/>
     </div>
