Added code_highlighting styles and the necessary tags to the code markup.

--- a/templates/layout.rhtml
+++ b/templates/layout.rhtml
@@ -4,7 +4,8 @@
     <link rel="stylesheet" type="text/css" href="/css/main.css">
     <script language="javascript" src="/js/jquery-1.4.1.min.js"> </script>
     <script language="javascript" src="/js/app.js"> </script>
-    <link rel="stylesheet" type="text/css" href="http://drnicwilliams.com/external/CodeHighlighter/styles.css"></link>
+    <!-- <link rel="stylesheet" type="text/css" href="http://drnicwilliams.com/external/CodeHighlighter/styles.css"></link> -->
+    <link rel="stylesheet" type="text/css" href="/css/code_highlighting.css"></link>
     <script src="http://drnicwilliams.com/external/CodeHighlighter/clean_tumblr_pre.js"></script>
     <link rel="alternate" type="application/atom+xml" title="<%= title %> - feed" href="/index.xml" />
     <title><%= title %></title>
