Changing feed link

--- a/templates/layout.rhtml
+++ b/templates/layout.rhtml
@@ -7,7 +7,7 @@
     <!-- <link rel="stylesheet" type="text/css" href="http://drnicwilliams.com/external/CodeHighlighter/styles.css"></link> -->
     <link rel="stylesheet" type="text/css" href="/css/code_highlighting.css"></link>
     <script src="http://drnicwilliams.com/external/CodeHighlighter/clean_tumblr_pre.js"></script>
-    <link rel="alternate" type="application/atom+xml" title="<%= title %> - feed" href="/index.xml" />
+    <link rel="alternate" type="application/atom+xml" title="<%= title %> - feed" href="/feed.xml" />
     <title><%= title %></title>
   </head>
   <body>
@@ -19,7 +19,7 @@
         <!-- <li><a href="/about">About</a></li> -->
         <li><a href="/archives">Archives</a></li>
       </ul>
-      <p><a href="http://feeds.feedburner.com/philcrissman"><img src="http://feeds.feedburner.com/~fc/philcrissman?bg=0099ee&amp;fg=000000&amp;anim=0" height="26" width="88" style="border:0" alt="" /></a></p>
+      <p><!-- <a href="http://feeds.feedburner.com/philcrissman"><img src="http://feeds.feedburner.com/~fc/philcrissman?bg=0099ee&amp;fg=000000&amp;anim=0" height="26" width="88" style="border:0" alt="" /></a> --><a href="http://feeds.feedburner.com/philcrissman"><img src="http://philcrissman.com/images/atom_feed_icon.jpg" border="0" /> Atom Feed</a></p>
       
       &nbsp;<br/>
     </div>
