Some little style changes, bring back the feedburner reader counter... uh, for now I guess?

--- a/templates/layout.rhtml
+++ b/templates/layout.rhtml
@@ -19,7 +19,7 @@
         <!-- <li><a href="/about">About</a></li> -->
         <li><a href="/archives">Archives</a></li>
       </ul>
-      <p><!-- <a href="http://feeds.feedburner.com/philcrissman"><img src="http://feeds.feedburner.com/~fc/philcrissman?bg=0099ee&amp;fg=000000&amp;anim=0" height="26" width="88" style="border:0" alt="" /></a> --><a href="http://feeds.feedburner.com/philcrissman"><img src="http://philcrissman.com/images/atom_feed_icon.jpg" border="0" /> Atom Feed</a></p>
+      <p><a href="http://feeds.feedburner.com/philcrissman"><img src="http://feeds.feedburner.com/~fc/philcrissman?bg=0099ee&amp;fg=000000&amp;anim=0" height="26" width="88" style="border:0" alt="" /></a><!--<a href="http://feeds.feedburner.com/philcrissman"><img class="rss" src="http://philcrissman.com/images/atom_feed_icon.jpg" border="0" /> Atom Feed</a>--></p>
       
       &nbsp;<br/>
     </div>
