--- a/public/css/main.css
+++ b/public/css/main.css
@@ -3,7 +3,8 @@ body {
   margin: 0 auto;
   background: #fff;
   /*  font-family: 'Baskerville', Georgia, Times, serif;*/
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+/*  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;*/
+  font-family: "Trebuchet MS", sans-serif;
   font-size: 16px;
   line-height: 30px;
   padding: 15px;
@@ -69,31 +70,37 @@ a#show {
 
 a {
   color: #27d;
-}
-
-a:hover {
-  color: #b41;
-  text-decoration: underline;
+  text-decoration: none;
 }
 
 a:visited {
   color: #737;
 }
 
+a:hover, a:hover * {
+    color: #000 !important;
+    /* color: #b41; */
+    text-shadow: 0 0 3px #1456a5;
+}
+
+
 h1 a {
   color: #333;
   text-decoration: none;
-}
-
-h1 a:hover {
-  color: #333;
-  text-decoration: underline;
 }
 
 h1 a:visited {
   color: #333;
 }
 
+h1 a:hover {
+  color: #333;
+/*  text-decoration: underline;*/
+}
+
+#stuff a:visited {
+  color: #27d;
+}
 
 header#header {
   background: transparent url(/images/nosignal-sm2.jpg) top right no-repeat;
@@ -222,4 +229,10 @@ img {
   -webkit-box-shadow: 1px 1px 3px rgba(0,0,0,0.6);
   -moz-box-shadow: 1px 1px 3px rgba(0,0,0,0.6);
   box-shadow: 1px 1px 3px rgba(0,0,0,0.6);
+}
+
+img.rss {
+  border: none;
+  padding: 0;
+  
 }
