Um, just trying some changes. We'll see.

--- a/templates/pages/article.rhtml
+++ b/templates/pages/article.rhtml
@@ -1,7 +1,11 @@
 <article class="post">
   <header>
     <h1><%= title %></h1>
-    <span class="date"><%= date %></span>
+    <span class="date">
+      <span class-"month"><%= month %></span>
+      <span class="day"><%= day %></span>
+      <span class="year"><%= year %></span>
+    </span>
     <p style="clear:both;"> </p>
   </header>
 
