--- a/templates/pages/main.rhtml
+++ b/templates/pages/main.rhtml
@@ -9,7 +9,7 @@ I'm a software developer and entrepreneur living in Minneapolis, MN.
 
 <h3>Software &amp; Projects:</h3>
 <ul>
-  <p><li><a href="http://github.com/philcrissman">github/philcrissman</a></li></p>
+  <li><a href="http://github.com/philcrissman">github/philcrissman</a></li>
 </ul>
 
 <h3>Work:</h3>
@@ -25,7 +25,7 @@ I'm a software developer and entrepreneur living in Minneapolis, MN.
   <li><a href="http://tumblon.com">Tumblon</a></li>
 </ul>
 
-<h3>The Twin Cities (Minneapolis/St. Paul) is not exactly Silicon Valley. But we have it going on.</h3>
+<h3>The Twin Cities (Minneapolis/St. Paul) has stuff happening.</h3>
 <ul>
   <li><a href="http://minnestar.org">Minne*</a>: The local non-profit behind Minnedemo and Minnebar, catalysts and hubs for the local tech scene.</li>
   <li><a href="http://ruby.mn"><acronym title="Ruby Users of Minnesota">RUM</acronym></a></li>
