--- a/templates/pages/blog.rhtml
+++ b/templates/pages/blog.rhtml
@@ -3,7 +3,12 @@
     <article class="post">
       <header>
         <h1><a href="<%= article.path %>"><%= article.title %></a></h1>
-        <span class="date"><%= article.date %></span>
+        <span class="date">
+          <span class-"month"><%= article.month %></span>
+          <span class="day"><%= article.day %></span>
+          <span class="year"><%= article.year %></span>
+          <%#= article.date %>
+        </span>
         <p style="clear:both;"> </p>
       </header>
 
