ok, trying the twitter widget again

--- a/templates/layout.rhtml
+++ b/templates/layout.rhtml
@@ -55,7 +55,7 @@
       
       <section id="sidebar">
         <section class="bg right">
-          <!--
+          
 
                     <script src="http://widgets.twimg.com/j/2/widget.js"></script>
                     <script>
@@ -88,7 +88,7 @@
                       }
                     }).render().setUser('philcrissman').start();
                     </script>
-                    <p>&nbsp;</p>
+               <!--     <p>&nbsp;</p>
                     <script src="http://widgets.twimg.com/j/2/widget.js"></script>
                     <script>
                     new TWTR.Widget({
