Updated 'reading' in the sidebar

--- a/templates/layout.rhtml
+++ b/templates/layout.rhtml
@@ -127,6 +127,8 @@
           <h2>Currently Reading</h2>
           <a href="http://www.amazon.com/gp/product/1594488843?ie=UTF8&tag=idepermin-20&linkCode=as2&camp=1789&creative=390957&creativeASIN=1594488843"><img border="0" src="/images/amazon/418pHnJLHLL._SL160_.jpg"></a><img src="http://www.assoc-amazon.com/e/ir?t=idepermin-20&l=as2&o=1&a=1594488843" width="1" height="1" border="0" alt="" style="border:none !important; margin:0px !important;" />
           <a href="http://www.amazon.com/gp/product/0735619670?ie=UTF8&tag=idepermin-20&linkCode=as2&camp=1789&creative=390957&creativeASIN=0735619670"><img border="0" src="/images/amazon/51PPS4C6i8L._SL160_.jpg"></a><img src="http://www.assoc-amazon.com/e/ir?t=idepermin-20&l=as2&o=1&a=0735619670" width="1" height="1" border="0" alt="" style="border:none !important; margin:0px !important;" />
+          <a href="http://www.amazon.com/gp/product/0765326353?ie=UTF8&tag=idepermin-20&linkCode=as2&camp=1789&creative=390957&creativeASIN=0765326353"><img border="0" src="/images/amazon/51wszGz3zgL._SL160_.jpg"></a><img src="http://www.assoc-amazon.com/e/ir?t=idepermin-20&l=as2&o=1&a=0765326353" width="1" height="1" border="0" alt="" style="border:none !important; margin:0px !important;" />
+          
           
           
           <p style="clear:both">&nbsp;</p>
